--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,35 @@
     height: auto;
     margin: 0 auto;
 }
+#navbar {
+    width: 1280px;
+    height: 60px;
+    background-color: black;
+}
+.navbar-list {
+    width: 1100px;
+    float: left;
+}
+.navbar-list ul {
+    text-decoration: none;
+}
+.navbar-list li {
+    text-decoration: none;
+    display: inline-block;
+}
+.navbar-list ul li a {
+    text-decoration: none;
+    padding: 30px;
+    text-transform: uppercase;
+    font-family: 'Cinzel Decorative', cursive;
+    color: snow;
+    font-weight: 600;
+}
+.navbar-content {
+    width: 180px;
+    float: right;
+}
+.navbar-content h3 {
+    color: snow;
+    font-family: 'Cinzel Decorative', cursive;
+}
