--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,21 @@
     color: snow;
     font-family: 'Cinzel Decorative', cursive;
 }
-figure {
-    margin: 0 auto;
+image {
+    position: relative;
+}
+h2 {
+    position: absolute;
+    top: 150px;
+    left: 100px;
+    font-size: 80px;
+    font-family: 'Cinzel Decorative', cursive;
+    color: snow;
+}
+#section h3 {
+    position: absolute;
+    bottom: 1px;
+    right: 100px;
+    font-size: 50px;
+    color: snow;
 }
