--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,11 @@
             width: 1000px;
             height: 60px;
             background-color: black;
-            text-align: center;
         }
         #footer p {
             color: snow;
+            font-family: 'Cinzel Decorative', cursive;
+            float: left;
+            padding-left: 20px;
+            margin-top: 10px;
         }
