--- a/css/main.css
+++ b/css/main.css
@@ -6,26 +6,76 @@
         #navbar {
             width: 1000px;
             height: 60px;
+            display: block;
+            margin: 0 auto 20px;
             background-color: black;
+            border: 1px solid #222;
+            position: relative;
         }
         .navbar-list {
             width: 900px;
             float: left;
         }
+        .navbar-list li:hover ul {
+            display: block;
+        }
         .navbar-list ul {
+            padding: 0;
+            margin: 0;
             text-decoration: none;
         }
         .navbar-list li {
-            text-decoration: none;
+            position: relative;
+            float: left;
+            list-style-type: none;
             display: inline-block;
         }
-        .navbar-list ul li a {
+        .navbar-list ul:after {
+            content: "";
+            display: block;
+            height: 0;
+            clear: both;
+            visibility: hidden;
+        }
+        .navbar-list li a {
             text-decoration: none;
-            padding: 30px;
+            display: block;
+            border-left: 1px solid #999;
+            border-right: 1px solid #222;
+            padding: 10px 30px;
             text-transform: uppercase;
             font-family: 'Cinzel Decorative', cursive;
             color: snow;
             font-weight: 600;
+        }
+        .navbar-list li a:focus {
+            text-decoration: underline;
+            outline: none;
+        }
+        .navbar-list li:first-child a {
+            border-left: none;
+        }
+        .navbar-list li.last a {
+            border-right: none;
+        }
+        .navbar-list ul ul {
+            display: none;
+            width: 100%;
+            position: absolute;
+            left: 0;
+            background: #6a6a6a;
+        }
+        .navbar-list ul ul li {
+            float: none;
+        }
+        .navbar-list ul ul a {
+            padding: 5px 10px;
+            border-left: none;
+            border-right: none;
+            font-size: 10px;
+        }
+        .navbar-list ul ul a:hover {
+            background-color: #555;
         }
         .navbar-content {
             width: 100px;
@@ -43,6 +93,7 @@
             width: 1000px;
             height: 700px;
             position: relative;
+            z-index: -1;
         }
         h2 {
             position: absolute;
